fix: modified TaxServiceDemo